System Job Standardisation More work on Articles

--- a/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Edit.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Edit.razor
@@ -19,6 +19,15 @@
 
     <RadzenButton ButtonStyle="ButtonStyle.Primary" ButtonType="ButtonType.Button" Click="@(() => OpenContentEditor())">Distraction Free Mode</RadzenButton>
 
+    @if (IsPublished)
+    {
+        <RadzenButton ButtonStyle="ButtonStyle.Warning" ButtonType="ButtonType.Button" Click="@(() => UnPublish())">Unpublish</RadzenButton>
+    }
+    else
+    {
+        <RadzenButton ButtonStyle="ButtonStyle.Success" ButtonType="ButtonType.Button" Click="@(() => Publish())">Publish</RadzenButton>
+    }
+
 </Form>
 
 @code {
@@ -31,11 +40,16 @@
     [Inject]
     private DialogService DialogService { get; set; } = default!;
 
+
+    public bool IsPublished { get; set; }
+
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
 
         var data = await Mediator.Send(new GetArticleByIdQuery(Id), default);
+
+        IsPublished = data.IsPublished;
 
         var parentsDropdownData = await GetParentOptions();
 
@@ -56,8 +70,9 @@
 
     private async Task ValidSubmitForm()
     {
-        var command = new CreateArticleCommand
+        var command = new UpdateArticleCommand
         {
+            Id = Id,
             Title = InputModel.Title,
             Description = InputModel.Description,
             PublishOnDate = InputModel.PublishOnDate,
@@ -78,6 +93,41 @@
     {
         return await Mediator.Send(new GetParentArticlePagesDropdownDataQuery(), default);
     }
+
+    private async Task Publish()
+    {
+        var result = await Mediator.Send(new PublishArticleCommand(Id));
+
+        if (!result.IsSuccess)
+        {
+            NotificationService.Notify(NotificationSeverity.Error, "Error: Could not publish Article");
+
+            return;
+        }
+
+        NotificationService.Notify(NotificationSeverity.Success, "Article published");
+
+        IsPublished = true;
+        InputModel.PublishOnDate = DateTime.UtcNow;
+    }
+
+    private async Task UnPublish()
+    {
+        var result = await Mediator.Send(new UnPublishArticleCommand(Id));
+
+        if (!result.IsSuccess)
+        {
+            NotificationService.Notify(NotificationSeverity.Error, "Error: Could not removed from publication");
+
+            return;
+        }
+
+        NotificationService.Notify(NotificationSeverity.Success, "Article removed from publication");
+
+        IsPublished = false;
+        InputModel.PublishOnDate = null;
+    }
+
     
     private async Task OpenContentEditor()
     {
