--- a/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Create.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Create.razor
@@ -34,6 +34,8 @@
     {
         await base.OnInitializedAsync();
 
+        await Mediator.Send(new SeedDefaultArticlesListingIfNeededCommand());
+
         var parentsDropdownData = await GetParentOptions();
 
         InputModel = new CreateArticleModel()
@@ -43,6 +45,8 @@
                 Data = parentsDropdownData ?? new List<DropdownInput>()
             }
         };
+
+
     }
 
     private async Task ValidSubmitForm()
