Article Image Uploads Work

--- a/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Edit.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Articles/Edit.razor
@@ -12,6 +12,8 @@
 @using Churchee.Module.UI.Models
 @using Radzen
 @using Radzen.Blazor
+@using Radzen.Blazor.Rendering
+@using Path = System.IO.Path;
 
 <PageName Name="Edit Article"></PageName>
 
@@ -94,13 +96,12 @@
     {
         NotificationService.Notify(NotificationSeverity.Success, "Image Added");
 
-
         var command = new UploadArticleImageCommand.Builder()
-        .SetName(model.Name)
         .SetFileName(Path.GetFileNameWithoutExtension(model.File.FileName))
         .SetExtension(Path.GetExtension(model.File.FileName))
         .SetDescription(model.Description)
         .SetBase64Content(model.File.Value)
+        .SetWidth(model.Width)
         .Build();
 
         var result = await Mediator.Send(command);
@@ -154,7 +155,7 @@
     {
        await DialogService.OpenAsync("Update Content", ds =>
 
-                                @<RadzenHtmlEditor @bind-Value=InputModel.Content Style="height: 89vh" UploadUrl="/upload/image" >
+                                @<RadzenHtmlEditor @bind-Value=InputModel.Content Style="height: 89vh">
                                     <RadzenHtmlEditorFormatBlock />
                                     <RadzenHtmlEditorUndo />
                                     <RadzenHtmlEditorRedo />
@@ -168,10 +169,43 @@
                                     <RadzenHtmlEditorSource />
                                     <RadzenHtmlEditorUnorderedList />
                                     <RadzenHtmlEditorOrderedList />
-                                    <RadzenHtmlEditorImage />                                    
+                                    <EditorButton Title="Insert Image" Click=@OpenImageUploadEditor Icon="image"/>
                                 </RadzenHtmlEditor>,
             new DialogOptions() { Width = "100%", Height = "100%"}
         );    
+
+    }
+        
+    public ImageUploadModel ImageUploadModel { get; set; } = new();
+
+    async Task OpenImageUploadEditor()
+    {
+       await DialogService.OpenAsync("Insert image", ds =>
+
+            @<ModalForm InputModel="ImageUploadModel" OnCancelForm=@(async () => await OnCancelImageUpload(ds)) OnSave=@(async () => await OnSaveImageUpload(ds)) />,
+            new DialogOptions() { Width = "700px"}
+
+        );    
+
+    }
+
+    private async Task OnCancelImageUpload(DialogService ds)
+    {
+        await Task.Run(() =>
+        {
+            ds.Close();
+            ImageUploadModel = new ImageUploadModel();
+        });
+    }
+
+    private async Task OnSaveImageUpload(DialogService ds)
+    {
+        await OnImageSubmit(ImageUploadModel);
+
+        await Task.Run(() =>
+        {
+            ds.Close();
+        });
 
     }
 }
