--- a/src/Churchee.Module.UI/Components/ProfileMenu.razor
+++ b/src/Churchee.Module.UI/Components/ProfileMenu.razor
@@ -7,7 +7,7 @@
 
 <RadzenProfileMenu>
     <Template>
-        <img class="rz-gravatar" src="@GravatarUrl" alt="gravatar" crossorigin>
+        <img class="rz-gravatar" src="@GravatarUrl" alt="gravatar" crossorigin="anonymous">
     </Template>
     <ChildContent>
         <RadzenProfileMenuItem Text="Profile" Path="/management/profile/email" Icon="account_circle"></RadzenProfileMenuItem>
