Filtered out bots and Monitors from Dashboard Results

--- a/src/Churchee.Module.Dashboard/Areas/Dashboard/Index.razor
+++ b/src/Churchee.Module.Dashboard/Areas/Dashboard/Index.razor
@@ -147,7 +147,7 @@
 
     async Task FilterClick(int days)
     {
-        data = await Mediator.Send(new GetDashboardDataQuery(days));
+        await GetData(days);
 
         switch (days)
         {
