Changed CSS Editor to Sass Editor to support new Functionality

--- a/src/Churchee.Module.UI/Components/CssEditor.razor
+++ b/src/Churchee.Module.UI/Components/CssEditor.razor
@@ -50,7 +50,7 @@
         return new StandaloneEditorConstructionOptions
             {
                 AutomaticLayout = true,
-                Language = "css"
+                Language = "scss"
             };
     }
 
